fix: toList는 불변임으로 Colletctors.toList로 변경